--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "gsap": "^1.20.4",
     "hammerjs": "^2.0.8",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
